--- a/openvidu-call-front/src/app/components/home/home.component.html
+++ b/openvidu-call-front/src/app/components/home/home.component.html
@@ -11,7 +11,7 @@
 		<a href="https://openvidu.io/" target="_blank">
 			<img id="form-img" src="assets/images/openvidu_logo.png" />
 		</a>
-		<h4 id="slogan-text">Videoconference rooms in one click</h4>
+		<h4 id="slogan-text">Bienvenido a RaxAcademy Conferencias v1</h4>
 	</div>
 	<div class="form-container">
 		<div class="grid">
