--- a/openvidu-call-front/src/app/components/home/home.component.html
+++ b/openvidu-call-front/src/app/components/home/home.component.html
@@ -13,7 +13,7 @@
 			<img id="form-img" src="assets/images/rax_log.jpg" />
 		</a>
 		-->
-		<h4 id="slogan-text">Bienvenido a RaxAcademy Conferencias v1</h4>
+		<h4 id="slogan-text">Bienvenido a RaxAcademy Conferencias</h4>
 	</div>
 	<div class="form-container">
 		<div class="grid">
