--- a/openvidu-call-front/src/app/components/home/home.component.scss
+++ b/openvidu-call-front/src/app/components/home/home.component.scss
@@ -1,6 +1,6 @@
 $loginBorderRadus: 0.35rem;
 $loginColor: #e6e6e6;
-$loginError: #770000;
+$loginError: white;
 $loginInputBackgroundColor: #434a52;
 $loginInputHoverBackgroundColor: #3c4249;
 $loginLabelBackgroundColor: #363b41;
