--- a/openvidu-call-front/src/app/components/home/home.component.html
+++ b/openvidu-call-front/src/app/components/home/home.component.html
@@ -119,7 +119,8 @@
 		<div>
 			adminLogin: {{ adminLogin }}<br/>
 			isUserLogged: {{ isUserLogged }} <br>
-			<a href="#" (click)="useAdmin($event)" target="_blank">login admin</a>
+			<a *ngIf="!isAdmin()" href="#" (click)="useAdmin($event)" target="_blank">login admin</a>
+			<span *ngIf="isAdmin()">Bienvenido Admin</span>
 		</div>
 	</div>
 
