--- a/openvidu-call-front/src/app/components/home/home.component.scss
+++ b/openvidu-call-front/src/app/components/home/home.component.scss
@@ -151,6 +151,15 @@ input[type='submit'] {
 	inline-size: 100%;
 }
 
+.login-admin{
+	color:white;
+	margin:5px;
+}
+.login-admin a{
+	color:gray;
+	margin-left: 20px;
+}
+
 .form-field {
 	display: flex;
 }
