--- a/openvidu-call-front/src/app/components/home/home.component.html
+++ b/openvidu-call-front/src/app/components/home/home.component.html
@@ -73,11 +73,10 @@
 					>
 
 					<select formControlName="sessionName" id="session-name-input" name="sessionName" class="form-input">
-						<option value="Tecnica1">Tecnica 1</option>
-						<option value="Tecnica2">Tecnica 2</option>
-						<option value="Tecnica3">Tecnica 3</option>
-						<option value="Tecnica4">Tecnica 4</option>
-						<option value="Improvisacion1">Improvisacion 1</option>
+						<option value="Salon1">Salon 1</option>
+						<option value="Salon2">Salon 2</option>
+						<option value="Salon3">Salon 3</option>
+						<option value="Salon4">Salon 4</option>
 					  </select>
 <!--
 					<input
