--- a/openvidu-call-front/src/app/vmcomputestatus/vmcomputestatus.component.html
+++ b/openvidu-call-front/src/app/vmcomputestatus/vmcomputestatus.component.html
@@ -1,6 +1,6 @@
-<p>Openvidu </p>
+<p>Server Status </p>
 
-status: {{ instanceStatus }}
+{{instanceName}}  {{ instanceStatus }}
 
 <div>
 {{ lastAction }}
