--- a/openvidu-call-front/src/app/vmcomputestatus/vmcomputestatus.component.html
+++ b/openvidu-call-front/src/app/vmcomputestatus/vmcomputestatus.component.html
@@ -5,7 +5,13 @@
 <div>
 {{ lastAction }}
 </div>
-<div>
+
+<div class="login-admin">
+	<button mat-button (click)="onUseAdmin($event)">login admin</button>
+	<span *ngIf="isAdmin">Bienvenido Admin</span>
+</div>
+
+<div *ngIf="isAdmin">
 <button mat-button (click)="onStart()">Start</button>
 <button mat-button (click)="onStop()">Stop</button>
 </div>
